# UK-Agent_typeC

./: .agentignore  .gitignore  CHANGELOG.md  START.bat  activate.bat  pyproject.toml  readme.md  requirements.txt
src/uk_agentc/: __init__.py  code_pattern.yaml  config.py  llm_client.py  main.py  tui.py
src/uk_agentc/agents/: executor.py  reporter.py  schema.py  supervisor.py  supervisor_prompt.yaml  verifier.py
src/uk_agentc/tools/: __init__.py  ai_assisted_coding_tools.py  code_analysis_tools.py  code_reporting_tools.py  code_tools.py  file_system_tools.py  file_tools.py  knowledge_tools.py  safe_code_editing_tools.py  system_tools.py
src/uk_agentc/utils/: path_utils.py
